@@ -2,6 +2,7 @@
   - columns in select field is ordered in select page.
   - add in condtion in select page.
   - add order section in select page.
+  - add condition in select page.
 0.17
   - catch up with Mojolicious 4.0
 0.16
